--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
     app:
         build: .
+        env_file:
+            - .env            
         environment:
             - MONGODB_URL=value
         ports:
